# mc-shell

./: .gitignore  README.md  build.py  package-lock.json  process.py  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
mced/: .gitignore  geometric_primitives_prompt.txt  package-lock.json  package.json
mced/src/: cli.mjs  control.css  control.html  control.js  control_new.js  editor.css  grid_wall.json  index.html  index.js  styles.css  toolbox.xml  workspace.json
mced/src/blocks/: greeting.mjs  materials.mjs  math.mjs  mc.mjs
mced/src/lib/: constants.mjs  htmx_listeners.js  utils.mjs
mced/src/workspaces/: BigGrid.json  GolemGame.json  GolemGame2.json  rotated_grid.json
mcshell/: Matrix3.py  Vec3.py  __init__.py  client.py  constants.py  mcactions.py  mcblockly.py  mcclient.py  mcdebugger.py  mcpaper.py  mcplayer.py  mcrepo.py  mcscraper.py  mcserver.py  mcshell.py  mcvoxel.py  ppdownloader.py  ppmanager.py  rconclient.py  utils.py
mcshell/api/: __init__.py  __init__.py.bak  connection.py  minecraft.py
mcshell/blueprints/: control_api.py  ipython_api.py  powers_api.py
mcshell/data/: Commands.pkl  EntityType.java.pkl  Material.html.pkl  ability.pkl  advancement.pkl  app  attribute.pkl  ban-ip.pkl  bossbar.pkl  camera.pkl  camerashake.pkl  changesetting.pkl  clear.pkl  clearspawnpoint.pkl  clone.pkl  commands.pkl  connect.pkl  control_layout.json  damage.pkl  data.pkl  datapack.pkl  daylock.pkl  debug.pkl  dedicatedwsserver.pkl  defaultgamemode.pkl  deop.pkl  dialogue.pkl  difficulty.pkl  effect.pkl  enchant.pkl  event.pkl  execute.pkl  fill.pkl  fillbiome.pkl  fog.pkl  forceload.pkl  function.pkl  gamemode.pkl  gamerule.pkl  gametest.pkl  (+69 more)
mcshell/data/app/: control.0754e065.js  control.0754e065.js.map  control.a8305382.css  control.a8305382.css.map  control.html  index.html  mced.4ec3b53e.js  mced.4ec3b53e.js.map  mced.d3383b43.css  mced.d3383b43.css.map  mced.dc141b10.css  mced.dc141b10.css.map  mced.ec80a7a3.js  toolbox.3749f602.xml
mcshell/data/doc/: command_docs.pkl
mcshell/data/entities/: entity_id_map.pkl
mcshell/pyrconshell/: README.md
py_rcon_shell/: rcon_shell.py
tests/: __init__.py
tests/mcactions/: __init__.py
tests/mcplayer/: __init__.py
(+15 files in other folders)
